@@ -1,14 +1,10 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
-COPY --chown=gradle:gradle . /home/gradle/src
-WORKDIR /home/gradle/src
-RUN gradle build --no-daemon
+FROM openjdk:17
+WORKDIR /tecnologia
 
-FROM openjdk:8-jre-slim
+CMD ["./gradlew", "clean", "bootJar"]
+
+COPY build/libs/*.jar tecnologia.jar
 
 EXPOSE 8080
 
-RUN mkdir /app
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/TecnologiaApplication.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/TecnologiaApplication.jar"]
+ENTRYPOINT ["java", "-jar","/tecnologia.jar"]
